--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -15,7 +15,7 @@ button.button-header {
   background-color: white;
   border: none;
   padding: .6rem;
-  margin-left: .2rem;
+  /* margin-left: .2rem; */
   margin-right: .2rem;
   border-radius: 5px;
   color: rgb(92, 201, 188);
