--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,11 +1,15 @@
 @use "../styles/partials/variables" as *;
 
-a{
+.offcanvas-backdrop.show {
+  opacity: 0;
+}
+
+a {
   text-decoration: none;
   color: inherit;
 }
 
-a:hover{
+a:hover {
   color: white;
 }
 
